# src/server/router_lifecycle_dto.rs
@@ -80,6 +80,8 @@ pub enum OperationTarget {
         requested_revision: Option<u64>,
         #[serde(skip_serializing_if = "Option::is_none")]
         eviction_target_id: Option<String>,
+        #[serde(skip_serializing_if = "Option::is_none")]
+        eviction_target_expected_revision: Option<u64>,
     },
     Catalog {
         scope: String,
